--- a/breed.html
+++ b/breed.html
@@ -271,9 +271,10 @@
 
 
   <footer>
-    &copy; 2025 Teacup Puppies | <a href="demo.html">Back to Home</a>
+    &copy; 2025 Teacup Puppies | <a href="index.html">Back to Home</a>
   </footer>
 
 </body>
 </html>
+
  
