--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav fs-5">
           <li class="nav-item"><a class="nav-link" href="demo.html">Home</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Breeds</a></li>
-          <li class="nav-item"><a class="nav-link" href="#">Compare</a></li>
+          <li class="nav-item"><a class="nav-link" href="breed.html">Breeds</a></li>
+          <li class="nav-item"><a class="nav-link" href="mybird.html">about us</a></li>
           <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
         </ul>
       </div>
@@ -224,4 +224,5 @@
   <!-- Bootstrap JS Bundle -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 </html>
